# Unmanned-ground-vehicle

./: .gitignore  .rosinstall  README.md
kut_ugv_behavior_planner/: CMakeLists.txt  package.xml
kut_ugv_behavior_planner/launch/: planner.launch
kut_ugv_behavior_planner/scripts/: fake_world_objects.py
kut_ugv_behavior_planner/src/: StateMachine.h  behavior_planner.cpp
kut_ugv_bringup/: CMakeLists.txt  package.xml
kut_ugv_bringup/config/: logging.conf  ugv.rviz
kut_ugv_bringup/launch/: bringup.launch  bringup_bag.launch  rviz.launch
kut_ugv_calibration_data/: CMakeLists.txt  package.xml
kut_ugv_calibration_data/config/: left_calib.yaml  mono_calib.yaml  right_calib.yaml
kut_ugv_cameras/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
kut_ugv_cameras/config/: cameras.yaml  stereo_proc.yaml
kut_ugv_cameras/launch/: bringup.launch  bringup_nodelets.launch  calibrate_mono.launch  calibrate_pose.launch  calibrate_stereo.launch  cameras_tf.launch  proc_nodelets.launch
kut_ugv_cameras/src/: camera_synchronizer.cpp
kut_ugv_data_logger/: CMakeLists.txt  package.xml
kut_ugv_data_logger/bags/: .gitignore  StateStamped.bmr
kut_ugv_data_logger/launch/: play.launch  record.launch
kut_ugv_data_logger/scripts/: bag_edit
kut_ugv_gps/: CMakeLists.txt  package.xml
kut_ugv_gps/launch/: bringup.launch
kut_ugv_ipm/: CMakeLists.txt  ipm_node_back.cpp  package.xml
kut_ugv_ipm/include/: LaneDetector.hh
kut_ugv_ipm/launch/: kut_ugv_ipm.launch
kut_ugv_ipm/src/: InversePerspectiveMapping.cc  LaneDetector.cc  LaneDetectorOpt.c  ipm_node.cpp
kut_ugv_lane_detector/: CMakeLists.txt  package.xml
kut_ugv_lane_detector/include/: ColorSignDetector.h
kut_ugv_lane_detector/launch/: kut_ugv_lane_detector.launch  kut_ugv_lane_detector.launch.orig  kut_ugv_lane_detector.launch~  stop_line_detector.launch~
kut_ugv_lane_detector/src/: CameraInfo.conf  ColorSignDetector.cpp  InversePerspectiveMapping.cc  LaneDetector.cc  LaneDetectorOpt.c  Lanes-mode2.conf  Lanes-mode2backup.conf  Lanes.conf  Lanes.conf~  Lanesbqckup.conf  lane_detector(backup).cpp  lane_detector.cpp  lane_detector_backup2.cpp  stopline.conf
kut_ugv_lasers/: CMakeLists.txt  laser_filters_plugins.xml  package.xml
kut_ugv_lasers/config/: bumper_laser_filters.yaml  roof_laser_filters.yaml
kut_ugv_lasers/launch/: bringup.launch  filters.launch
kut_ugv_lasers/src/: bypass_filter.h  point_types.h  publish_assembled_cloud.cpp  road_filter.cpp  statistical_road_filter.h
kut_ugv_localization/: CMakeLists.txt  package.xml
kut_ugv_localization/launch/: gps_ekf.launch  visual_odom.launch
kut_ugv_localization/scripts/: gps_ekf.py  move_tf.py  odom_set_covariance_bag.py  pose_with_covariance_to_odometry.sh  recompose.py  remove_odom_tf.sh
kut_ugv_localization/src/: sync_gps_vehicle_state.cpp
kut_ugv_msgs/: .gitignore  CMakeLists.txt  WorldObject.h  package.xml
kut_ugv_msgs/msg/: MotionCommandStamped.msg  VelocityLimit.msg  WorldObject.msg
kut_ugv_reactive_planner/: .gitignore  CMakeLists.txt  curv_check.txt  curv_element.txt  curv_element2.txt  curvature_test.txt  f1_speed_curve.txt  package.xml  speed_curve.txt  speed_log.txt  speed_planning_test.txt
kut_ugv_reactive_planner/launch/: play_bag.launch  reactive_motion_control.launch
kut_ugv_reactive_planner/src/: filtered_wp2.txt  planner_node.cpp
kut_ugv_reactive_planner/waypoints/: kut_velocity_profile.txt  velocity_profile.txt  wp_f1_circuit_2.txt  wp_katech_0710_filtered1.txt  wp_katech_0710_sg_smoothing.txt  wp_kut_0716_sg_filter1.txt  wp_kut_0718_filtered1.txt  wp_kut_0718_sg_filter.txt  wp_kut_0718_sg_smoothing.txt
kut_ugv_reactive_planner/waypoints/Katech/: 0926_curvature.txt  0926_velocity.txt  0926_waypoint.txt  katech_velocity2.txt  katech_velocity3.txt  speed_sample.txt  velocity.txt
kut_ugv_reactive_planner/waypoints/Kut/: kut_speed_sample.txt
kut_ugv_sensor_fusion/: CMakeLists.txt  package.xml
kut_ugv_sensor_fusion/calib/: calib.yaml  pedestrian_svm.yaml  traffic_light_model.yaml  traffic_sign_svm.yaml
kut_ugv_sensor_fusion/config/: config.yaml
kut_ugv_sensor_fusion/include/: BlobLabeling.h  Classifier.hpp  ColorSignDetector.h  DList.h  ImProcessingTools.h  PostProcessing.h  RotationalOffset.h  SensorFusion.h  TimeUtilities.h  ihls.h  math_utils.h  nhs.h
kut_ugv_sensor_fusion/launch/: calibration_features_extraction_node.launch  chess_calibration_data_colection_node.launch  data_recorder.launch  lidar_segmentation.launch  moving_object_detector.launch  pedestrian_detector.launch  perception.launch  sensor_fusion.launch  sensor_fusion_test.launch  traffic_light_detector.launch  traffic_signs_detector.launch
kut_ugv_sensor_fusion/msg/: lidar_object.msg  lidar_object_list.msg  lidar_segmentation_labels.msg  world_object.msg
kut_ugv_sensor_fusion/src/: BlobLabeling.cpp  ColorSignDetector.cpp  ImProcessingTools.cpp  PostProcessing.cpp  RotationalOffset.cpp  SensorFusion.cpp  calibration_features_extraction_node.cpp  chess_calibration_data_colection_node.cpp  cvplot.cpp  data_recorder_node.cpp  ihls.cpp  laser_intensities_node.cpp  lidar_segmentation_node.cpp  moving_object_detector_node.cpp  nhs.cpp  pedestrian_detector_node.cpp  sensor_fusion_node.cpp  traffic_light_detector_node.cpp  traffic_sign_detector_node.cpp
kut_ugv_trajectory_observer/: CMakeLists.txt  package.xml
kut_ugv_trajectory_observer/launch/: trajectoroy_observer.launch
kut_ugv_trajectory_observer/msg/: HeadingStamped.msg
kut_ugv_trajectory_observer/src/: trajectory_observer.cpp
kut_ugv_trajectory_observer/waypoints/F1/: curvature.txt  velocity.txt  waypoint.txt
kut_ugv_trajectory_observer/waypoints/Katech/: curvature.txt  speed_sample2.txt
kut_ugv_trajectory_observer/waypoints/Kut/: curvature.txt
kut_ugv_vehicle/: .gitignore  CMakeLists.txt  package.xml
kut_ugv_vehicle/config/: kia_sorento.yaml
kut_ugv_vehicle/launch/: crio.launch
kut_ugv_vehicle/msg/: State.msg  StateStamped.msg
kut_ugv_vehicle/src/: crio_comm_node.cpp  vehicle_kinematics.hpp
